--- a/client/css/imports.css
+++ b/client/css/imports.css
@@ -1,4 +1,5 @@
 @import './fonts.css';
+@import 'normalize.css';
 @import './media-queries.css';
 @import './base.css';
 @import './illustrations.css';
