--- a/client/css/pages/Landing.css
+++ b/client/css/pages/Landing.css
@@ -1,10 +1,10 @@
 .hero__container {
+  font-family: var(--font-varela);
   position: relative;
   height: 70vh;
 }
 
 .hero__heading {
-  font-family: var(--font-multicolore);
   position: absolute;
   top: 5%;
   left: 5%;
