adding some cards

--- a/client/css/base.css
+++ b/client/css/base.css
@@ -15,7 +15,7 @@
   --blue: #75c4fa;
   --blue-2: #4dadf7;
   --blue-darker: #3090e5;
-  --blue-ligher: #e9f7ff;
+  --blue-lighter: #e9f7ff;
   --orange: #fd7e14;
   --orange-lighter: #f8bd4e;
   --orange-darker: #dd6546;
