adding hiragana cards

--- a/client/css/base.css
+++ b/client/css/base.css
@@ -6,6 +6,7 @@
   --font-size: 1rem;
 
   --green: #46bf5c;
+  --green-lighter: #56e971;
   --grey: #f8f9fa;
   --red: #dc3a35;
   --white: #ffffff;
