--- a/client/css/pages/Landing.css
+++ b/client/css/pages/Landing.css
@@ -24,6 +24,7 @@
   font-size: calc(var(--font-size) * 1.5);
   margin: 0;
   margin-bottom: 3rem;
+  color: var(--black);
 }
 
 .hero__overlay {
@@ -76,14 +77,15 @@
   position: relative;
   color: var(--white);
   border-radius: 20px;
-  border-top-width: 0.0625rem;
-  border-bottom-width: 0.2625rem;
+  border-width: 0.0625rem;
   border-color: rgba(0, 0, 0, 0.2);
   border-style: solid;
+  box-shadow: inset 0 0 0 2px white;
+  overflow: hidden;
 }
 
 .hero__kanji__card:nth-child(1) {
-  background: var(--pink);
+  background: var(--purple);
   transform: rotate(-15deg) translate(25px, 0px);
   width: calc(var(--font-size) * 8);
   height: calc(var(--font-size) * 10);
@@ -91,7 +93,7 @@
 }
 
 .hero__kanji__card:nth-child(2) {
-  background: var(--purple);
+  background: var(--green-lighter);
   transform: rotate(5deg) translate(25px, 40px);
   width: calc(var(--font-size) * 6);
   height: calc(var(--font-size) * 8);
@@ -107,7 +109,7 @@
 }
 
 .hero__kanji__card:nth-child(4) {
-  background: var(--blue);
+  background: var(--blue-darker);
   transform: rotate(20deg) translate(10px, 60px);
   width: calc(var(--font-size) * 7);
   height: calc(var(--font-size) * 9);
@@ -130,4 +132,21 @@
   text-align: center;
   right: 0;
   left: 0;
+}
+
+.hero__hiragana__card {
+  position: absolute;
+  top: 0;
+  left: 0;
+  transform: scale(0.4);
+  transform-origin: 0 0;
+  color: var(--black);
+  background: var(--white);
+  border-bottom-right-radius: 20px;
+}
+
+.hero__hiragana__character {
+  position: relative;
+  top: 5px;
+  transform: scale(0.4);
 }
