--- a/client/css/illustrations.css
+++ b/client/css/illustrations.css
@@ -15,10 +15,14 @@
 
 .illustration__overlay {
   background-image: url('../imgs/overlay.svg');
-  background-size: 60%;
+  background-size: 105%;
   background-repeat: repeat;
   background-position: center center;
-  width: 100%;
-  height: 100%;
+}
+
+@media (--phone-breakpoint) {
+  .illustration__overlay {
+    background-size: 60%;
+  }
 }
 /* stylelint-enable */
